--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
-body {
-    /* background-color: brown; */
-}
+/* body {
+    margin: 0;
+} */
 
 
 .font-inter-font {
@@ -17,10 +17,11 @@ nav {
 .btn {
     background-color: #469165;
     border: none;
-    padding: 15px 15px;
+    padding: 13px 15px;
     border-radius: 5px;
-    font-size: 16px;
+    font-size: 18px;
     color: #FFFFFF;
+    cursor: pointer;
 }
 
 .navbar {
@@ -57,7 +58,7 @@ nav .menu a {
 }
 
 .banner-content {
-    padding-top: 180px;
+    padding-top: 130px;
 }
 
 .banner-content span {
@@ -65,10 +66,90 @@ nav .menu a {
 }
 
 .banner-content h1 {
-    font-weight: 600;
+    color: #FFFFFF;
+    font-size: 55px;
+    margin: 3px;
 }
 
 #banner .banner-image {
     background-image: url("../assets/hero-bg.png");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100%;
     height: 600px;
+}
+
+.banner-content p {
+    color: #FFFFFF;
+    font-size: small;
+
+}
+
+.arrow {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.banner-btn {
+    border: 2px solid #FFFFFF;
+    padding: 13px 15px;
+    border-radius: 5px;
+    font-size: 18px;
+    margin: 3px;
+    background: transparent;
+    color: #FFFFFF;
+    cursor: pointer;
+    gap: 3px;
+}
+
+.early-btn {
+    background-color: #FFFFFF;
+    border: none;
+    padding: 10px 13px;
+    border-radius: 10px;
+    font-size: 18px;
+    color: #30B868;
+}
+
+
+.notes-section {
+    text-align: center;
+}
+
+.notes-section h1 {
+    font-size: 50px;
+    margin: 3px;
+}
+
+.notes-section p {
+    font-size: 16px;
+    color: #627382;
+}
+
+/* card section */
+.vector {
+    background-color: red;
+    border-radius: 50%;
+
+}
+
+.vector-border {
+    width: 20px;
+    height: 20px;
+
+}
+
+#cards {
+    display: flex;
+    gap: 20px;
+    margin: 60px auto;
+    padding: 30px 80px;
+}
+
+#cards .card-container {
+    border: 1px solid red;
+
+
 }
