--- a/styles/style.css
+++ b/styles/style.css
@@ -132,8 +132,6 @@ nav .menu a {
 .image {
     background-color: red;
     border-radius: 50%;
-
-
 }
 
 .image-border {
@@ -172,21 +170,22 @@ nav .menu a {
     text-align: center;
 }
 
-
 /* brain-section */
 
 #brain-section {
     display: flex;
+    /* align-items: center; */
     padding-top: 30px;
 }
 
 #brain-section img {
-    width: 480px;
+    width: 500px;
     height: 500px;
-    padding-left: 130px;
+    padding-left: 110px;
 }
 
 .brain {
+    max-width: 550px;
     padding-left: 40px;
 }
 
@@ -205,4 +204,48 @@ nav .menu a {
 .para-2 {
     font-size: 16px;
     color: #627382;
+}
+
+.feature-list li {
+    /* display: flex; */
+    align-items: center;
+    list-style: none;
+    font-size: 16px;
+}
+
+
+/* challenge section */
+
+#ready-part-01 {
+    padding-top: 120px;
+    justify-items: center;
+}
+
+.ready-part-02 {
+    text-align: center;
+    background-color: #F7F6F2;
+    border: 1px solid #F7F6F2;
+    border-radius: 5px;
+    height: 240px;
+    width: 1100px;
+    padding-top: 40px;
+}
+
+.ready-part-02 h2 {
+    font-size: 40px;
+    font-weight: bold;
+    margin: 2px;
+}
+
+.ready-part-02 p {
+    font-size: 14px;
+    color: #627382;
+}
+
+
+/* footer section */
+
+footer {
+    background-color: #001931;
+    height: 400px;
 }
