--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,12 @@
 /* body {
     margin: 0;
 } */
+/* * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 
+} */
 
 .font-inter-font {
     font-family: "Inter", sans-serif;
@@ -247,5 +252,48 @@ nav .menu a {
 
 footer {
     background-color: #001931;
-    height: 400px;
+    height: 300px;
+    margin-top: 50px;
+    width: 100%;
+    padding: 0;
+
+}
+
+.footer-part {
+    display: flex;
+    padding-left: 120px;
+    padding-right: 120px;
+    padding-top: 100px;
+    padding-bottom: 30px;
+    justify-content: space-between;
+}
+
+.social-part {
+    padding-right: 30px;
+    padding-bottom: 10px;
+}
+
+.social-part p {
+    color: #FFFFFF;
+}
+
+.social-part i {
+    background-color: #FFFFFF;
+    border-radius: 50%;
+    width: 25px;
+    height: 20px;
+    align-content: center;
+}
+
+.footer-line {
+    width: 1100px;
+    color: 1px solid #627382;
+    align-content: center;
+
+}
+
+.footer-last {
+    color: #627382;
+    font-size: 14px;
+    text-align: center;
 }
